--- a/css/main.css
+++ b/css/main.css
@@ -49,7 +49,7 @@ figcaption {
 }
 
 blockquote {
-  font-size:1.5rem;;
+  font-size:1.5rem;
 }
 
 cite {
@@ -63,14 +63,22 @@ h2 {
 }
 
 dl {
-  font-family:"PT Serif", serif;
+  font-family: "PT Serif", serif;
   font-size: 1.125rem;
 }
 
 dd {
-  font-family:"PT Sans", sans-serif;
+  font-family: "PT Sans", sans-serif;
   font-size: 1.125rem;
   text-align: right;
+}
+
+ol {
+  list-style-type: lower-latin;
+}
+
+.tags {
+  list-style-type: circle;
 }
 
 .nutrition {
@@ -81,7 +89,7 @@ dd {
 }
 
 aside {
-  font-size:0.8rem;
+  font-size: 0.8rem;
 }
 
 footer {
