--- a/css/main.css
+++ b/css/main.css
@@ -2,6 +2,7 @@ html {
   background-color: #c9b5ab;
   font-family: "PT Serif", serif;
   line-height: 1.5rem;
+  font-size: 1rem;
 }
 
 header {
@@ -52,10 +53,6 @@ blockquote {
   font-size: 1.5rem;
 }
 
-cite {
-  font-size: .8rem;
-}
-
 h2 {
   font-family: "PT Sans", sans-serif;
   font-weight: bold;
@@ -92,7 +89,6 @@ ol {
   font-size: .8rem;
   color: #222;
   font-weight: normal;
-  margin-left: none;
   list-style-type: none;
 }
 
@@ -105,13 +101,14 @@ aside {
 }
 
 footer {
-  font-size: 1.125rem;
   font-weight: normal;
 }
 
 footer a {
   color: #8f2440;
   text-decoration: none;
+  font-size: 1.125rem
+  font-weight:normal;
 }
 
 footer a:hover {
