--- a/css/main.css
+++ b/css/main.css
@@ -107,7 +107,7 @@ footer {
 footer a {
   color: #8f2440;
   text-decoration: none;
-  font-size: 1.125rem
+  font-size: 1.125rem;
   font-weight:normal;
 }
 
