--- a/css/main.css
+++ b/css/main.css
@@ -21,6 +21,10 @@ img {
   width: 100%;
 }
 
+.nav {
+  list-style-type: none;
+}
+
 nav {
   font-family: "PT Serif", serif;
   font-size: 1.125rem;
@@ -51,6 +55,12 @@ figcaption {
 
 blockquote {
   font-size: 1.5rem;
+  font-family: "PT Serif", serif;
+  font-weight: italic;
+}
+
+cite {
+  font-size: .8rem;
 }
 
 h2 {
@@ -59,18 +69,21 @@ h2 {
   font-size: 1.5rem;
 }
 
-dl {
-  font-family: "PT Serif", serif;
-  font-size: 1.125rem;
+dt, dd {
+  display: inline-block;
 }
 
 dd {
-  font-family: "PT Sans", sans-serif;
-  font-size: 1.125rem;
-  text-align: right;
+  text-align: left;
 }
 
-ol {
+dd, dl {
+  font-family: "PT Sans", sans-serif;
+  font-size: 1.125rem;
+  text-align: inherit;
+}
+
+.varieties {
   list-style-type: lower-greek;
 }
 
@@ -82,14 +95,13 @@ ol {
   font-size: 1.125rem;
   font-weight: bold;
   color: #3f1622;
-  text-align: inherit;
   list-style-type: none;
+  text-align: start;
 }
 
 .nutrition :nth-child(2n) {
   font-size: .8rem;
   color: #222;
-  text-align: inherit;
   font-weight: normal;
   list-style-type: none;
 }
@@ -98,14 +110,9 @@ aside {
   font-size: .8rem;
 }
 
-footer {
-  font-weight: normal;
-}
-
 footer a {
   color: #8f2440;
   text-decoration: none;
-  font-weight: normal;
 }
 
 footer a:hover {
