--- a/css/main.css
+++ b/css/main.css
@@ -56,7 +56,7 @@ figcaption {
 blockquote {
   font-size: 1.5rem;
   font-family: "PT Serif", serif;
-  font-weight: italic;
+  font-style: italic;
 }
 
 cite {
